--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "canvasjs": "^1.8.3",
     "d3": "^5.16.0",
     "formik": "^2.1.5",
+    "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-activity": "^1.2.2",
     "react-dom": "^16.13.1",
